# fuzzy_cpp

./: .clang-uml  .gitignore  CMakeLists.txt  CMakeSettings.json  LICENSE  README.md
.github/workflows/: clang.yml  cmake-multi-platform.yml  cmake-reusable.yml  gcc.yml  msvc.yml
fuzzy/: CMakeLists.txt
fuzzy/include/: fuzzy.hpp
fuzzy/include/fuzzy/: aggregator.hpp  algorithm.hpp  concepts.hpp  consequent.hpp  defuzzification.hpp  element.hpp  expressions.hpp  fwd.hpp  mapping.hpp  mapping_rule.hpp  math.hpp  norm_conorm.hpp  operations.hpp  operator.hpp  operators.hpp  relation.hpp  result_aggregator.hpp  scaled_antecedent.hpp  scaled_application.hpp  scaled_mapping.hpp  scaling_inference.hpp  set.hpp  traits.hpp
include/fuzzy/: element.hpp  fwd.hpp  operator.hpp  traits.hpp
test/: CMakeLists.txt  static_test.cpp  test.cpp  test.hpp
